language/move-lang/tests/move_check/liveness/copy_after_move.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/liveness/copy_after_move.move:5:9
  │
4 │         move x;
  │         ------ The variable does not have a value due to this position. The variable must be assigned a value before being used
5 │         copy x;
  │         ^^^^^^ Invalid usage of variable 'x'

