language/move-lang/tests/move_check/liveness/copy_after_move.move
module M {
    t0() {
        let x = 0;
        move x;
        copy x;
    }
}
